--- a/rocket.html
+++ b/rocket.html
@@ -6,23 +6,24 @@
 	<script type="text/javascript" src="js/rocket.js"></script>
 </head>
 <body class="body-state1"> 
-	<div class="left">	
-		<div class="state1">
+	<div class="left">
+		<div class="bottom"></div>	
+		<div class="interface state1">
 			<h1>Trump Launch</h1>
 			<a href="#" class="button" onclick="changeState(2);">Launch!</a>
 		</div>
-		<div class="state2">
+		<div class="interface state2">
 			<h1 id="countdown">10</h1>
-			<a href="#" class="button" onclick="changeState(1);">Abort!</a>
+			<a href="#" class="link" onclick="changeState(1);">Abort!</a>
 		</div>
-		<div class="state3">
+		<div class="interface state3">
 			<h1>Lift Off!</h1>
 		</div>
-		<div class="state4">
+		<div class="interface state4">
 			<h1>Well done!</h1>
 			<a href="#" class="button" onclick="changeState(1);">Do it again!</a>
 		</div>
-		<div class="state5">
+		<div class="interface state5">
 			<h1>Loser!</h1>
 			<a href="#" class="button" onclick="changeState(1);">Try again!</a>
 		</div>		
@@ -30,6 +31,8 @@
 	<div class="right">
 		<div class="rocket"></div>
 		<div class="ground"></div>
+		<div class="smart" id="smart"></div>
+		<div class="bye-losers" id="bye-losers"></div>
 	</div>
 </body>
 </html>
